--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,15 +23,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: Set-ExecutionPolicy RemoteSigned -scope CurrentUser
-      - run:
-          name: "Install Package Manager"
-          command: iwr -useb get.scoop.sh | iex
-      - run:
-          name: "Install Node"
-          command: scoop install nodejs
-      - run: npm install
-      - run: npm test
+      - run: docker run --rm -w "/app" -v "$(pwd)":"\app" stefanscherer/node-windows:10.16.3-nanoserver-1809 npm.cmd install
 workflows:
   version: 2
   build:
